# polaris

ADR/: webgui_cameras.md
ros/: camera_stream.launch  test_cameras.md
ros/src/periph/: CMakeLists.txt  package.xml
ros/src/periph/include/: peripheralBase.hpp
ros/src/periph/src/: peripheralBase.cpp  peripheralManager.cpp
ros/src/peripherals/src/: README.md  hydrophones.cpp  imu.cpp  motor_controller.cpp  peripheralBase.hpp  peripheralManager.cpp  power_board.cpp
ros/src/vision/: CMakeLists.txt
ros/src/vision/detectors/: gate_detection.cpp
ros/src/vision/launchfiles/: camera.launch
ros/src/vision/src/: buoyDetector.cpp  gate_detection.cpp
ros/src/webgui/: CMakeLists.txt  camera.launch  camera_stream.launch  index.html  navigation.html  package.xml  sub_node_error.txt  system.html  testpackage.xml
ros/src/webgui/src/: reciever.cpp  sender.cpp
